--- a/templates/base_security.html.twig
+++ b/templates/base_security.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr_BE">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,39 +8,36 @@
     <title>{% block title %}Liste de médicaments !{% endblock %}</title>
     {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
-    {% block stylesheets %}
-        {# parent() #}
-        {{ encore_entry_link_tags('back') }}
-    {% endblock %}
 
     {% block javascripts %}
-        {# parent() #}
-        {{ encore_entry_script_tags('back') }}
+        {% block importmap %}
+            {{ importmap('app') }}
+        {% endblock %}
     {% endblock %}
 </head>
-<body class="bg-tertiary-light bg-illustration ">
-<div class="container-left bg-white border-primary">
-    {% block header %}
-        <header class="toolbar">
-            <span class="title text-primary">  <i class="material-icons-two-tone">medication_liquid</i> Mes médocs</span>
+<body class="w-full h-full bg-base-light dark:bg-base-dark">
+<div class="container">
+    {#    {% block header %} #}
+    {#        <header class="toolbar"> #}
+    {#            <span class="title">  <i class="material-icons-two-tone">medication_liquid</i> Mes médocs</span> #}
 
-            {% block login_button %}
-                {% if app.user %}
-                    {{ app.user.username }},
-                    <a href="{{ path('app_logout') }}" class="btn btn-basic">
-                        {% trans %}Logout{% endtrans %}
-                    </a>
-                {% else %}
-                    <a href="{{ path('app_login') }}" class="btn btn-basic">
-                        {% trans %}Sign in{% endtrans %}
-                    </a> or
-                    <a href="{{ path('app_register') }}" class="btn btn-basic">
-                        Register
-                    </a>
-                {% endif %}
-            {% endblock %}
-        </header>
-    {% endblock %}
+    {#            {% block login_button %} #}
+    {#                {% if app.user %} #}
+    {#                    {{ app.user.username }}, #}
+    {#                    <a href="{{ path('app_logout') }}" class="btn btn-basic"> #}
+    {#                        {% trans %}Logout{% endtrans %} #}
+    {#                    </a> #}
+    {#                {% else %} #}
+    {#                    <a href="{{ path('app_login') }}" class="btn btn-basic"> #}
+    {#                        {% trans %}Sign in{% endtrans %} #}
+    {#                    </a> or #}
+    {#                    <a href="{{ path('app_register') }}" class="btn btn-basic"> #}
+    {#                        Register #}
+    {#                    </a> #}
+    {#                {% endif %} #}
+    {#            {% endblock %} #}
+    {#        </header> #}
+    {#    {% endblock %} #}
 
     {% for message in app.flashes('notice') %}
         <div class="alert alert-notice">
@@ -62,6 +59,7 @@
         </footer> #}
     {% endblock %}
 </div>
+{% include '_template-parts/_footer.html.twig' %}
 </body>
 
 </html>
