--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,7 @@
     <section class="">
         <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
             <a href="{{ path('public_index') }}" class="flex justify-center items-center text-2xl font-semibold text-content-primary-light dark:text-content-primary-dark">
-                <svg xmlns="http://www.w3.org/2000/svg"  class="mr-2 h-6" fill="none" viewBox="0 0 24 24" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs">
+                <svg xmlns="http://www.w3.org/2000/svg"  class="mr-2 h-6" fill="none" viewBox="0 0 24 24"  xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs">
                     <path fill="url(&quot;#SvgjsLinearGradient1076&quot;)" fill-rule="evenodd" d="M3 5a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zM3 12a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zM3 19a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" clip-rule="evenodd"></path><defs><linearGradient gradientTransform="rotate(0 0.5 0.5)" id="SvgjsLinearGradient1076"><stop stop-opacity=" 1" stop-color="rgba(105, 234, 203)" offset="0"></stop><stop stop-opacity=" 1" stop-color="rgba(234, 204, 248)" offset="0.48"></stop><stop stop-opacity=" 1" stop-color="rgba(102, 84, 241)" offset="1"></stop></linearGradient></defs></svg>
                 Medocs.be
             </a>
@@ -30,7 +30,7 @@
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                         {% trans %} title.login {% endtrans %}
                     </h1>
-                    <form class="space-y-4 md:space-y-6" action="#">
+                    <form class="space-y-4 md:space-y-6"  method="post">
                         {% if error %}
                             <div class="bg-red-800 text-red-50">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                         {% endif %}
@@ -63,8 +63,9 @@
                         </div>
                         <twig:button:submit class="md:w-full">{% trans %}signin {% endtrans %}</twig:button:submit>
                         <p class="text-sm font-light text-content-primary-light/60 dark:text-content-primary-dark/50">
-                            {% trans %} form.not_registered{% endtrans %} <a href="#"
-                                                                             class="font-medium text-primary-600 hover:underline dark:text-primary-500">{% trans %}signup {% endtrans %}</a>
+                            {% trans %} form.not_registered{% endtrans %}
+                            <a href="{{ path('app_register') }}"
+                               class="font-medium text-primary-600 hover:underline dark:text-primary-500">{% trans %}signup {% endtrans %}</a>
                         </p>
                         <input type="hidden" name="_csrf_token"
                                value="{{ csrf_token('authenticate') }}"
@@ -76,7 +77,7 @@
     </section>
 
 
-    <form method="post">
+
 
         {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -88,5 +89,4 @@
             </label>
         </div>
         #}
-    </form>
 {% endblock %}
