Refactor lines list index and template parts

--- a/templates/member/product/list/index.html.twig
+++ b/templates/member/product/list/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '../..'%}
+{% extends 'base.html.twig'%}
 
 {% set object = 'line' %}
 
@@ -8,10 +8,18 @@
 {% block card_title %} medocs {% endblock %}
 
 {% block body %}
-
     {% embed "_template-parts/_lines-list.html.twig" %}
+
         {% block button_action %}
-            <a href="{{ path('member_line_new') }}" class="bt bg-info text-info p06 radius-5p margin-horizontal-2 "> Ajouter</a>
+            <a href="{{ path('member_line_new') }}"
+               class="flex items-center justify-center text-content-primary-dark bg-surface-dark hover:bg-surface-dark/80 focus:ring-4 focus:ring-surface-dark/30 font-medium rounded-lg text-sm px-4 py-2 dark:text-content-primary-light dark:bg-surface-light/60 dark:hover:bg-surface-light/70 focus:outline-none dark:focus:ring-surface-light/80">
+                <svg class="h-3.5 w-3.5 mr-2" fill="currentColor" viewbox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path clip-rule="evenodd" fill-rule="evenodd"
+                          d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"/>
+                </svg>
+                {% trans %} button.add{% endtrans %}
+            </a>
         {% endblock %}
     {% endembed %}
 {% endblock %}
