--- a/templates/member/product/list/new.html.twig
+++ b/templates/member/product/list/new.html.twig
@@ -1,68 +1,54 @@
-{# {% extends 'admin/skeleton/new.html.twig'%} #}
-
 {% set object = 'line' %}
 
-{# {% block title %}Ajouter une ligne{% endblock %} #}
-
-{# {% block header_h1 %} Lignes {% endblock %} #}
-
-{# {% block comment %} {% endblock %} #}
-{% extends 'base_back.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Nouvelle ligne{% endblock %}
 
-{% block header_h1 %} Médicaments dans la liste {% endblock %}
-{% block header_h1_icon %}
-    <a href="{{ path('member_' ~ object ~ '_index') }}"
-       class="btn circle bg-primary-lighter border-primary inline"
-       title="revenir à la liste">
-
-        <i class="material-icons">list</i>
-    </a>
-{% endblock %}
 {% block body %}
-    <section class="card wfull">
-        <div class="card-header">
-            <h3 class="title">{% block card_title %} Ajouter {% endblock %}</h3>
-        </div>
-        <div class="card-body">
-            {{ form_start(form) }}
-            <div class="horizontal-group wfull">
+    <section class="bg-surface-light/50 dark:bg-surface-dark/30 p-3 sm:p-5 space-y-8">
+        <div class="mx-auto max-w-screen-xl px-4 lg:px-12">
+            <div class="bg-surface-light dark:bg-surface-dark relative shadow-md sm:rounded-lg overflow-hidden">
 
-                <div class="horizontal-item">
-                    <div class="form-row">
-                        {{ form_label(form.qty, 'Q') }}
-                        {{ form_widget(form.qty, {
-                            'type':'number',
-                            'attr': {
-                                'min': 0.5,
-                                'max': 10,
-                                'step': 0.5,
-                                'style': 'width: 5rem'
-                            }}) }}
+                <twig:title:h2 class="p-4"> Ajouter</twig:title:h2>
+                <div class="p-4">
+                    {{ form_start(form, {'class': 'w-full'}) }}
+                    <div class="w-full flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
+                        <div class="w-full flex  md:flex-1 items-center space-x-4">
+                            <div class="w-16">
+                                {{ form_label(form.qty, 'Q', {'label_attr': {'class': 'block mb-2 text-sm font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
+                                {{ form_widget(form.qty, {
+                                    'type':'number',
+                                    'attr': {
+                                        'min': 0.5,
+                                        'max': 10,
+                                        'step': 0.5,
+                                        'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
+                                    }}) }}
 
+                            </div>
+                            <div class="flex flex-col flex-1">
+                                {{ form_label(form.product, 'Produits') }}
+                                {{ form_widget(form.product, {'attr': {'class': 'form-control bg-base-light/50 border border-gray-300 text-content-primary-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'}}) }}
+                            </div>
+                        </div>
+                        <div class="w-full md:w-20 items-center">
+                            <div>&nbsp;</div>
+                            <a href="{{ path('member_product_new') }}" title="ajouter un produit"
+                               class="inline-block w-full bg-base-light/80 capitalize text-center font-semibold hover:underline underline-offset-8  drop-shadow-lg border border-gray-300 text-content-primary-light  rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/70 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring"> ajouter</a>
+                        </div>
                     </div>
                 </div>
-                <div class="horizontal-item">
-                    <div class="form-row">
-                        {{ form_label(form.product, 'Produits') }}
-                        {{ form_widget(form.product) }}
-
-                        <a href="{{ path('member_product_new') }}"
-                           title="ajouter un produit"
-                           class="text-primary-darker">
-                            <i class="material-icons-round">add_box</i>
-                        </a>
-                    </div>
-                </div>
-                <div class="horizontal-item">
-                    <div class="form-row">
-                        {{ form_label(form.day) }}
-                        {{ form_widget(form.day) }}
+                <div class="w-full flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
+                    <div class="w-full space-y-2 flex flex-col space-x-4">
+                        {{ form_label(form.day, null, {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
+                        {{ form_widget(form.day, {'attr': {'class': 'bg-base-light/50 border-2 border-gray-300 text-content-dark/90 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500'}}) }}
 
                         <a href="{{ path('member_day_new') }}" class="text-primary-darker">
                             <i class="material-icons-round">add_box</i>
                         </a>
+                    </div>
+                    <div>
+                        explic
                     </div>
                 </div>
                 <div class="horizontal-item">
@@ -81,6 +67,7 @@
                                           value="Ajouter">{% endblock %}
             </div>
             {{ form_end(form) }}
+        </div>
         </div>
     </section>
 {% endblock %}
