Add button component and update button styles in action, secondary, and submit templates

--- a/templates/components/button/submit.html.twig
+++ b/templates/components/button/submit.html.twig
@@ -1,4 +1,4 @@
 <button type="submit"
-        {{ attributes.defaults({class: "w-full md:w-fit text-content-primary-light bg-content-secondary hover:bg-content-secondary/80  focus:outline-none ring-1 ring-content-secondary focus:ring-content-secondary/50 font-medium rounded-lg text-sm px-5 py-3 text-center dark:bg-content-secondary/90 dark:hover:bg-content-secondary/70 dark:focus:ring-content-secondary/80"}) }}>
+        {{ attributes.defaults({class: "w-full md:w-fit text-content-primary-light bg-content-secondary/80 hover:bg-content-secondary  focus:outline-none ring-1 ring-content-secondary focus:ring-content-secondary/50 font-bold rounded-lg text-sm px-5 py-3 text-center dark:bg-content-secondary/70 dark:hover:bg-content-secondary/80 dark:focus:ring-content-secondary/80"}) }}>
     {% block content %} {% endblock %}
 </button>
